--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -17,11 +17,11 @@
     </style>
     <div>
         <h1>Lookup Item Info</h1>
-        <h2>Enter item number:</h2>
-        <input type="text" id="id_part_number" placeholder="Search by Item Number"></input>
+        <h3>Item number:</h3>
+        <input type="text" id="id_part_number" placeholder="Search by Item Number" style="width:300px;"></input>
         
         <h3 style="margin-top:12px; margin-bottom:-2px; font-size:18px;">Description:</h3>
-        <input type="text" id="noreallywtfisit" placeholder="Search by Description"></input>
+        <input type="text" id="noreallywtfisit" placeholder="Search by Description" style="width:300px;"></input>
         <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
         
         <h3 style="margin-top:12px; margin-bottom:-2px; font-size:18px;">Qty On Hand:</h3>
@@ -44,74 +44,18 @@
                    "{{item.itemcode}}",
                 {% endfor %}
             ];
-            $.extend($.ui.autocomplete.prototype, {
-                _renderMenu: function (ul, items) {
-                    //remove scroll event to prevent attaching multiple scroll events to one container element
-                    $(ul).unbind("scroll");
-
-                    var self = this;
-                    self._scrollMenu(ul, items);
-                },
-
-                _scrollMenu: function (ul, items) {
-                    var self = this;
-                    var maxShow = 5;
-                    var results = [];
-                    var pages = Math.ceil(items.length / maxShow);
-                    results = items.slice(0, maxShow);
-
-                    if (pages > 1) {
-                        $(ul).scroll(function () {
-                            if (isScrollbarBottom($(ul))) {
-                                ++window.pageIndex;
-                                if (window.pageIndex >= pages) return;
-
-                                results = items.slice(window.pageIndex * maxShow, window.pageIndex * maxShow + maxShow);
-
-                                //append item to ul
-                                $.each(results, function (index, item) {
-                                    self._renderItem(ul, item);
-                                });
-                                //refresh menu
-                                !this.active||(this.active.children("a").removeClass("ui-state-hover").removeAttr("id"),this._trigger("blur"),this.active=null);
-                                self.menu.refresh();
-                                // size and position menu
-                                ul.show();
-                                self._resizeMenu();
-                                ul.position($.extend({
-                                    of: self.element
-                                }, self.options.position));
-                                if (self.options.autoFocus) {
-                                    self.menu.next(new $.Event("mouseover"));
-                                }
-                            }
-                        });
-                    }
-
-                    $.each(results, function (index, item) {
-                        self._renderItem(ul, item);
-                    });
-                }
-            });
-            
-            function isScrollbarBottom(container) {
-                 var height = container.outerHeight();
-                 var scrollHeight = container[0].scrollHeight;
-                 var scrollTop = container.scrollTop();
-                 if (scrollTop >= scrollHeight - height) {
-                     return true;
-                 }
-                 return false;
-            };
-            
+            //Item Number Search
             let $partNumber = $("#id_part_number");
+            let $itemDescription = $("#noreallywtfisit")
             $partNumber.autocomplete({ // Sets up a dropdown for the part number field 
-                source: availableItemCodes,
                 minLength: 2,
-                delay: 0,
                 autoFocus: true,
+                source: function (request, response) {
+                    let results = $.ui.autocomplete.filter(availableItemCodes, request.term);
+                    response(results.slice(0,10));
+                },
                 change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
-                    $('#noreallywtfisit').text("");
+                    $itemDescription.val("");
                     $('#howfuckinmuch').text("");
                     $('.animation').toggle();
                     var item = $partNumber.val().toUpperCase() // Make sure the part_number field is uppercase
@@ -119,7 +63,7 @@
                         function(data) {
                             console.log("change")
                             console.log(data)
-                            $('#noreallywtfisit').text(data.reqItemDesc); // Update desc value
+                            $itemDescription.val(data.reqItemDesc); // Update desc value
                             $('#howfuckinmuch').text(parseFloat(data.reqQty));
                             return;
                     })
@@ -133,7 +77,7 @@
                         })
                 },
                 select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
-                    $('#noreallywtfisit').text("");
+                    $itemDescription.val("");
                     $('#howfuckinmuch').text("");
                     $('.animation').toggle();
                     var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
@@ -141,11 +85,10 @@
                         function(data) {
                             console.log("select")
                             console.log(data)
-                            $('#noreallywtfisit').text(data.reqItemDesc); // Update desc value
+                            $itemDescription.val(data.reqItemDesc); // Update desc value
                             $('#howfuckinmuch').text(parseFloat(data.reqQty));
                             return;
                         })
-                        // Fail is probably redundant but just in case we need it, here is the garbage DNA
                         //.fail(function() { // err handle
                         //    console.log("Part Number field is blank or not found");
                         //    $('#noreallywtfisit').text("uhhh");
@@ -155,16 +98,64 @@
                             $('.animation').toggle();
                         })
                 },
-            }).focus(function () {
-                //reset result list's pageindex when focus on
-                window.pageIndex = 0;
-                $(this).autocomplete("search");
-                });
             });
+
+            //Description Search
+            $itemDescription.autocomplete({ // Sets up a dropdown for the part number field 
+                minLength: 2,
+                autoFocus: true,
+                source: function (request, response) {
+                    let results = $.ui.autocomplete.filter(availableItemDesc, request.term);
+                    response(results.slice(0,10));
+                },
+                change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
+                    $partNumber.val("");
+                    $('#howfuckinmuch').text("");
+                    $('.animation').toggle();
+                    var item = $partNumber.val().toUpperCase() // Make sure the part_number field is uppercase
+                    $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
+                        function(data) {
+                            console.log("change")
+                            console.log(data)
+                            $itemDescription.val(data.reqItemDesc); // Update desc value
+                            $('#howfuckinmuch').text(parseFloat(data.reqQty));
+                            return;
+                    })
+                        //.fail(function() { // err handle
+                        //    console.log("Part Number field is blank or not found");
+                        //    $('#noreallywtfisit').text("uhhh");
+                        //    $('#howfuckinmuch').text("Part Number field is blank or not found");
+                        //})
+                        .always(function() {
+                            $('.animation').toggle();
+                        })
+                },
+                select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
+                    $partNumber.val("");
+                    $('#howfuckinmuch').text("");
+                    $('.animation').toggle();
+                    var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
+                    $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
+                        function(data) {
+                            console.log("select")
+                            console.log(data)
+                            $('#noreallywtfisit').val(data.reqItemDesc); // Update desc value
+                            $('#howfuckinmuch').text(parseFloat(data.reqQty));
+                            return;
+                        })
+                        //.fail(function() { // err handle
+                        //    console.log("Part Number field is blank or not found");
+                        //    $('#noreallywtfisit').text("uhhh");
+                        //    $('#howfuckinmuch').text("Part Number field is blank or not found");
+                        //})
+                        .always(function() {
+                            $('.animation').toggle();
+                        })
+                },
+            });
+        });
     } catch (pnError) {
         console.log(pnError)
-    };
-
-
+    }
 </script>
 {% endblock %}
