--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -13,19 +13,42 @@
 <!-- Body Blocks -->
 {% block content %} 
     <style>
-        body {margin-top: 6rem; margin-left: 4rem;}
+        body {
+            margin-top: 6rem;
+            margin-left: 2rem;
+        }
+        
+        h2 {
+            margin-top:12px; 
+            margin-bottom:-2px; 
+            font-size:18px;
+        }
+
+        .ui-autocomplete {
+            max-height: 200px;
+            overflow-y: auto;
+            /* prevent horizontal scrollbar */
+            overflow-x: hidden;
+            /* add padding to account for vertical scrollbar */
+            padding-right: 20px;
+        }
+
+        .loading {
+            background-image: url("https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif");
+            background-repeat: no-repeat;
+            background-size: 20px 20px;
+        }
     </style>
     <div>
         <h1>Lookup Item Info</h1>
-        <h3>Item number:</h3>
+        <h2>Item number:</h2>
         <input type="text" id="id_part_number" placeholder="Search by Item Number" style="width:300px;"></input>
         
-        <h3 style="margin-top:12px; margin-bottom:-2px; font-size:18px;">Description:</h3>
-        <input type="text" id="noreallywtfisit" placeholder="Search by Description" style="width:300px;"></input>
-        <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
-        
-        <h3 style="margin-top:12px; margin-bottom:-2px; font-size:18px;">Qty On Hand:</h3>
-        <div id="howfuckinmuch">Enter a part number above</div>
+        <h2>Description:</h2>
+        <input type="text" id="noreallywtfisit" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+
+        <h2>Qty On Hand:</h2>
+        <div id="howfuckinmuch">Use search fields to display qty on hand</div>
         <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
     </div>
   {% endblock content %}
@@ -44,7 +67,7 @@
                    "{{item.itemcode}}",
                 {% endfor %}
             ];
-            //Item Number Search
+            // ===============  Item Number Search  ===============
             let $partNumber = $("#id_part_number");
             let $itemDescription = $("#noreallywtfisit")
             $partNumber.autocomplete({ // Sets up a dropdown for the part number field 
@@ -58,6 +81,8 @@
                     $itemDescription.val("");
                     $('#howfuckinmuch').text("");
                     $('.animation').toggle();
+                    $partNumber.addClass('loading');
+                    $itemDescription.addClass('loading');
                     var item = $partNumber.val().toUpperCase() // Make sure the part_number field is uppercase
                     $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
                         function(data) {
@@ -74,12 +99,16 @@
                         //})
                         .always(function() {
                             $('.animation').toggle();
+                            $partNumber.removeClass('loading');
+                            $itemDescription.removeClass('loading');
                         })
                 },
                 select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
                     $itemDescription.val("");
                     $('#howfuckinmuch').text("");
                     $('.animation').toggle();
+                    $partNumber.addClass('loading');
+                    $itemDescription.addClass('loading');
                     var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
                     $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
                         function(data) {
@@ -96,50 +125,67 @@
                         //})
                         .always(function() {
                             $('.animation').toggle();
+                            $partNumber.removeClass('loading');
+                            $itemDescription.removeClass('loading');
                         })
                 },
             });
-
-            //Description Search
+            //   ===============  Description Search  ===============
             $itemDescription.autocomplete({ // Sets up a dropdown for the part number field 
-                minLength: 2,
+                minLength: 3,
                 autoFocus: true,
                 source: function (request, response) {
                     let results = $.ui.autocomplete.filter(availableItemDesc, request.term);
-                    response(results.slice(0,10));
+                    response(results.slice(0,300));
                 },
                 change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
                     $partNumber.val("");
+                    $partNumber.addClass('loading');
+                    $itemDescription.addClass('loading');
                     $('#howfuckinmuch').text("");
                     $('.animation').toggle();
-                    var item = $partNumber.val().toUpperCase() // Make sure the part_number field is uppercase
-                    $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
+                    try { var item = ui.item.label;
+                    } catch {
+                        var item = $itemDescription.val();
+                    }
+                    $.getJSON('iteminfo_fromdesc_request/',{item:item}, // send json request with description in request url
                         function(data) {
+                            try {
                             console.log("change")
                             console.log(data)
-                            $itemDescription.val(data.reqItemDesc); // Update desc value
+                            $partNumber.val(data.reqItemCode); // Update part number value
                             $('#howfuckinmuch').text(parseFloat(data.reqQty));
                             return;
+                            } catch {
+                                console.log("Description field is blank or not found");
+                                $('.animation').toggle();
+                                $partNumber.removeClass('loading');
+                                $itemDescription.removeClass('loading');
+                                $('#howfuckinmuch').text("Item not found");
+                            }
                     })
-                        //.fail(function() { // err handle
-                        //    console.log("Part Number field is blank or not found");
-                        //    $('#noreallywtfisit').text("uhhh");
-                        //    $('#howfuckinmuch').text("Part Number field is blank or not found");
-                        //})
-                        .always(function() {
-                            $('.animation').toggle();
-                        })
+                    .fail(function() { // err handle
+                        console.log("Description field is blank or not found");
+                        $('#howfuckinmuch').text("Item not found");
+                    })
+                    .always(function() {
+                        $('.animation').toggle();
+                        $partNumber.removeClass('loading');
+                        $itemDescription.removeClass('loading');
+                    })
                 },
                 select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
                     $partNumber.val("");
                     $('#howfuckinmuch').text("");
                     $('.animation').toggle();
-                    var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
-                    $.getJSON('iteminfo_request/',{item:item}, // send json request with part number in request url
+                    $partNumber.addClass('loading');
+                    $itemDescription.addClass('loading');
+                    var item = ui.item.label
+                    $.getJSON('iteminfo_fromdesc_request/',{item:item}, // send json request with description in request url
                         function(data) {
-                            console.log("select")
+                            console.log("change")
                             console.log(data)
-                            $('#noreallywtfisit').val(data.reqItemDesc); // Update desc value
+                            $partNumber.val(data.reqItemCode); // Update part number value
                             $('#howfuckinmuch').text(parseFloat(data.reqQty));
                             return;
                         })
@@ -150,12 +196,16 @@
                         //})
                         .always(function() {
                             $('.animation').toggle();
+                            $partNumber.removeClass('loading');
+                            $itemDescription.removeClass('loading');
                         })
                 },
             });
         });
     } catch (pnError) {
         console.log(pnError)
-    }
+    };
+
+
 </script>
 {% endblock %}
