--- a/app/core/templates/core/tanklevels.html
+++ b/app/core/templates/core/tanklevels.html
@@ -31,13 +31,22 @@
             </thead>
             {% for tank in tank_level_queryset %}
                 <tr>
-                    <td>{{ tank.tank_label }}</td>
-                    <td>{{ tank.scaled_volume }}</td>
-                    <td>{{ tank.fill_height }}</td>
-                    <td>{{ tank.percent_filled }}</td>
+                    <td id="label_"+{{ tank.tank_label }}>{{ tank.tank_label }}</td>
+                    <td id="volume_"+{{ tank.tank_label }}>{{ tank.scaled_volume }}</td>
+                    <td id="fillHeight_"+{{ tank.tank_label }}>{{ tank.fill_height }}</td>
+                    <td id="percent_"+{{ tank.tank_label }}>{{ tank.percent_filled }}</td>
                 </tr>
             {% endfor %}
         </table>
     </div>
   {% endblock content %}
 
+<script>
+    //$.get('http://192.168.178.210/fieldDeviceData.htm', function(html) {
+    //    alert(html);
+    //    });
+    $.get('http://localhost:1337/core/chemshortages/', function(html) {
+        console.log(html);
+        });
+    
+</script>
