added enterkeyhint to input fields

--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -42,10 +42,10 @@
     <div>
         <h1>Lookup Item Info</h1>
         <h2>Item number:</h2>
-        <input type="text" id="id_part_number" placeholder="Search by Item Number" style="width:300px;"></input>
+        <input type="text" id="id_part_number" placeholder="Search by Item Number" style="width:300px;" enterkeyhint="search"></input>
         
         <h2>Description:</h2>
-        <input type="text" id="noreallywtfisit" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+        <input type="text" id="noreallywtfisit" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
 
         <h2>Qty On Hand:</h2>
         <div id="howfuckinmuch">Use search fields to display qty on hand</div>
