update timesheet link

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -215,13 +215,13 @@
 
       <!-- Time Sheets -->
       <div class="feature col">
-        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/time%20sheet%20list.xls">
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/time%20sheet%20list.xlsx">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
           </div>
         </a>
         <h2>Time Sheets</h2>
-        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/time%20sheet%20list.xls" class="icon-link d-inline-flex align-items-center">
+        <a href="https://adminkinpak.sharepoint.com/sites/PDTN/Shared%20Documents/time%20sheet%20list.xlsx" class="icon-link d-inline-flex align-items-center">
           Open Time Sheets
           <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
         </a>
