--- a/app/core/templates/core/lookuplocation.html
+++ b/app/core/templates/core/lookuplocation.html
@@ -19,10 +19,10 @@
         <h1>Lookup Locations</h1>
 
         <h3>Item number:</h3>
-        <input type="text" id="id_part_number" placeholder="Search by Item Number" style="width:300px;"></input>
+        <input type="text" id="id_part_number" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
 
         <h3>Description:</h3>
-        <input type="text" id="noreallywtfisit" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+        <input type="text" id="noreallywtfisit" enterkeyhint="search" .placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
 
         <h3>Location:</h3>
         <div id="wherethefuckisit">Use search fields to display qty on hand</div>
