Lay groundwork for tanklevels and lotnumlookup.

--- a/app/core/templates/core/lookuplocation.html
+++ b/app/core/templates/core/lookuplocation.html
@@ -17,15 +17,15 @@
     </style>
     <div>
         <h1>Lookup Locations</h1>
-
-        <h3>Item number:</h3>
+        <br>
+        <h4>Item number:</h4>
         <input type="text" id="id_part_number" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
-
-        <h3>Description:</h3>
-        <input type="text" id="noreallywtfisit" enterkeyhint="search" .placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
-
-        <h3>Location:</h3>
-        <div id="wherethefuckisit">Use search fields to display qty on hand</div>
+        <br>
+        <h4>Description:</h4>
+        <input type="text" id="noreallywtfisit" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+        <br>
+        <h4>Location:</h4>
+        <div id="wherethefuckisit">Use search fields to display chemical locations.</div>
         <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
     </div>
 
