Paginate the chemshortage table.

--- a/app/core/templates/core/chemshortages.html
+++ b/app/core/templates/core/chemshortages.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}<title>Counts Needed</title>{% endblock %}
+{% block title %}<title>Chemical Shortages</title>{% endblock %}
 
 {% block content %}
 
@@ -76,7 +76,7 @@
                         <th scope="col" class='text-center'></th>
                     </tr>
                 </thead>
-                {% for item in chems_used_upcoming %}
+                {% for item in current_page.object_list %}
                     {% if item.component_itemcode != "030143" %}
                     <tr>
                         <td style="vertical-align: middle;">{{ item.bill_pn }}</td>
@@ -98,6 +98,19 @@
                     {% endif %}
                 {% endfor %}
             </table>
+        </div>
+        <div class='text-center'>
+            <div id="page-links">
+                {% if current_page.has_previous %}
+                    <a href="/core/chemshortages/?page={{ current_page.previous_page_number }}">Previous Page</a>
+                {% endif %}
+                {% if current_page.has_next %}
+                    <a href="/core/chemshortages/?page={{ current_page.next_page_number }}">Next Page</a>
+                {% endif %}
+            </div>
+            <div>
+                Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
+            </div>
         </div>
 
     {% endif %}
