--- a/app/core/templates/core/chemshortages.html
+++ b/app/core/templates/core/chemshortages.html
@@ -54,11 +54,13 @@
     {% else %}
         <div class="text-center header-div">
             <h1>No Chemical Shortages Upcoming</h1>
-            <br/><br/> 
+            <br/><br/>
+        <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
             <h3>
                 <em>Usage detailed below:</em>
             </h3>
         </div>
+
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
                 <thead class="thead-dark">
