--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
         <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>  
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'core/main.css' %}">
+        <link rel="icon" href="{% static 'kpklauncher/media/kpk.ico'%}">
         {% block title %}<title>The Blendverse</title>{% endblock %}
 
         {% block scripts %}{% endblock %}
@@ -21,9 +22,10 @@
     <body>
         <header class="site-header">
             <!--Navbar-->
-            <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
                 <div class="container">
-                    <a class="navbar-brand mr-4" href="/">KPK-App</a>
+                    
+                    <a class="navbar-brand mr-4" href="/"><img src="/static/core/kpklogo.png"></img>KPK-App</a>
                     <!--Collapse button-->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>    
                         <!--Collapsable content-->
@@ -65,10 +67,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/chemshortages">Chem Shortages</a>
                                 </li>
-                                <li class="nav-item">    
-                                    <a class="nav-link" href="/core/reports">Reports</a>
-                                </li>
-
+                                <!---
+                                    <li class="nav-item">    
+                                        <a class="nav-link" href="/core/reports">Reports</a>
+                                    </li>
+                                -->
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Issue Sheets
