make blendshortages page names consistent

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class='text-center'>
-        <h1>Upcoming Shortages</h1>
+        <h1>Blend Shortages</h1>
         <br/><br/> 
     </div>
     <table class="table text-left table-bordered table-hover">
