--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,10 +50,10 @@
                                 {% if user.is_staff %}
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Upcoming
+                                        Blend Auditing
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                      <li><a class="dropdown-item" href="/core/blendthese">Blend Shortages</a></li>
+                                      <li><a class="dropdown-item" href="/core/blendshortages">Blend Shortages</a></li>
                                       <li><a class="dropdown-item" href="/core/allupcomingproduction/?page=1">All Production</a></li>
                                       <li><a class="dropdown-item" href="/core/upcomingcounts">Blends Used Soon</a></li>
                                       <li><hr class="dropdown-divider"></li>
