thead now sticky

--- a/app/core/templates/core/blendcountsheets.html
+++ b/app/core/templates/core/blendcountsheets.html
@@ -16,7 +16,7 @@
     <div id="selection_table" class="table-responsive-sm">
         <br/>
         <table class="table text-left table-bordered">
-            <thead class="thead-dark">
+            <thead class="thead-dark"style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
                     <th scope="col" class='text-center'>Add to Count List</th>
                     <th scope="col" class='text-center'>Blend</th>
