--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -6,7 +6,7 @@
         <br/><br/> 
     </div>
     <table class="table text-left table-bordered table-hover">
-        <thead class="thead-dark">
+        <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
             <tr>
                 <th scope="col" class="text-center">Blend</th>
                 <th scope="col" class="text-center">Description</th>
