--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -10,7 +10,7 @@
     </div>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered">
-            <thead class="thead-dark">
+            <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
                     <th scope="col">Bill No.</th>
                     <th scope="col">Blend Part No.</th>
