--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
     <body>
         <header class="site-header">
             <!--Navbar-->
-            <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" style="z-index: 9999 !important;">
                 <div class="container">
                     <img src="{% static 'core/kpklogo.png' %}" height=40px width=40px >
                     <a class="navbar-brand mr-4" href="/" style="padding-left:15px">KPK-App</a>
