--- a/app/core/templates/core/chemshortages.html
+++ b/app/core/templates/core/chemshortages.html
@@ -13,7 +13,7 @@
 
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
-                <thead class="thead-dark">
+                <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 9999 !important;">
                     <tr>
                         <th scope="col" class='text-center'>Blend PN</th>
                         <th scope="col" class='text-center'>Blend Description</th>
