--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -13,7 +13,7 @@
     <br/><br/>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered">
-            <thead class="thead-dark">
+            <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
                     <th scope="col" class='text-center'>Blend</th>
                     <th scope="col" class='text-center'>Description</th>
