Add qtyonhand and uom to the locationlookup page.

--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -48,7 +48,7 @@
         <input type="text" id="noreallywtfisit" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
 
         <h2>Qty On Hand:</h2>
-        <div id="howfuckinmuch">Use search fields to display qty on hand</div>
+        <div id="howfuckinmuch"><em>Use search fields to display qty on hand.</em></div>
         <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
     </div>
   {% endblock content %}
