--- a/app/core/templates/core/lookuplocation.html
+++ b/app/core/templates/core/lookuplocation.html
@@ -25,7 +25,9 @@
         <input type="text" id="noreallywtfisit" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
         <br>
         <h4>Location:</h4>
-        <div id="wherethefuckisit">Use search fields to display chemical locations.</div>
+        <div id="wherethefuckisit"><em>Use search fields to display chemical locations.</em></div>
+        <h4>Quantity On Hand:</h4>
+        <div id="howfuckinmuch"><em>Quantity will appear here.</em></div>
         <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
     </div>
 
@@ -58,6 +60,7 @@
                 change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
                     $itemDescription.val("");
                     $('#wherethefuckisit').text("");
+                    $('#howfuckinmuch').text("");
                     $('.animation').toggle();
                     $partNumber.addClass('loading');
                     $itemDescription.addClass('loading');
@@ -68,6 +71,7 @@
                             console.log(data)
                             $itemDescription.val(data.description); // Update desc value
                             $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
+                            $('#howfuckinmuch').text(data.qtyonhand + " " + data.standard_uom + " on hand.");
                             return;
                     })
                         //.fail(function() { // err handle
@@ -84,6 +88,7 @@
                 select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
                     $itemDescription.val("");
                     $('#wherethefuckisit').text("");
+                    $('#howfuckinmuch').text("");
                     $('.animation').toggle();
                     $partNumber.addClass('loading');
                     $itemDescription.addClass('loading');
@@ -94,6 +99,7 @@
                             console.log(data)
                             $itemDescription.val(data.description); // Update desc value
                             $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
+                            $('#howfuckinmuch').text(data.qtyonhand + " " + data.standard_uom + " on hand.");
                             return;
                         })
                         //.fail(function() { // err handle
@@ -121,6 +127,7 @@
                     $partNumber.addClass('loading');
                     $itemDescription.addClass('loading');
                     $('#wherethefuckisit').text("");
+                    $('#howfuckinmuch').text("");
                     $('.animation').toggle();
                     try { var item = ui.item.label;
                     } catch {
@@ -133,6 +140,7 @@
                             console.log(data)
                             $partNumber.val(data.reqItemCode); // Update part number value
                             $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
+                            $('#howfuckinmuch').text(data.qtyonhand + " " + data.standard_uom + " on hand.");
                             return;
                             } catch {
                                 console.log("Description field is blank or not found");
@@ -140,6 +148,7 @@
                                 $partNumber.removeClass('loading');
                                 $itemDescription.removeClass('loading');
                                 $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
+                                $('#howfuckinmuch').text(data.qtyonhand + " " + data.standard_uom + " on hand.");
                             }
                     })
                     .fail(function() { // err handle
@@ -155,6 +164,7 @@
                 select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
                     $partNumber.val("");
                     $('#wherethefuckisit').text("");
+                    $('#howfuckinmuch').text("");
                     $('.animation').toggle();
                     $partNumber.addClass('loading');
                     $itemDescription.addClass('loading');
@@ -165,6 +175,8 @@
                             console.log(data)
                             $partNumber.val(data.reqItemCode); // Update part number value
                             $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
+                            console.log(data.qtyonhand + " " + data.standard_uom + " on hand.");
+                            $('#howfuckinmuch').text(data.qtyonhand + " " + data.standard_uom + " on hand.");
                             return;
                         })
                         //.fail(function() { // err handle
